--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep4.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep4.vm
@@ -53,7 +53,7 @@
     </div>
     
     <div id="body">
-		<form id="form-addBankCard" class="common-form"  method="post" action="${staticDomain}/bankcard/addBankCardPage.htm">
+		<form id="form-addBankCard" class="common-form"  method="post" action="${staticDomain}/bankcard/addBankCard1.htm">
         <div class="container">
 			<div class="a1">机构开户</div>
 			<div class="u2">
