--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingCard.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingCard.vm
@@ -91,7 +91,7 @@ $(function(){
     						</div>
                         </li>
     					#end
-                        <li class="card card-add"><a href="${staticDomain}/bankcard/addBankCard.htm">添加银行卡</a></li>
+                        <li class="card card-add"><a href="${staticDomain}/bankcard/addBankCard1.htm">添加银行卡</a></li>
                     </ul>
                     <div>历史银行卡：</div>
                     <ul class="card-list clearfix">
@@ -109,7 +109,7 @@ $(function(){
     							<a bankacco="${card.bankacco}" class="set-active" href="#">激活</a>
 								#end
 								#if(${card.tradeaccost}=="F")
-    							<a bankacco="${card.bankacco}" href="${staticDomain}/bankcard/addBankCard.htm?bankAcco=$tailStr">再次绑卡</a>
+    							<a bankacco="${card.bankacco}" href="${staticDomain}/bankcard/addBankCard1.htm?bankAcco=$tailStr">再次绑卡</a>
 								#end
     						</div>
                         </li>
