--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep2.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep2.vm
@@ -85,8 +85,18 @@
 			<div class="u3">
 			    <div class="v1">
 			        <span class="v1_1">经办人授权委托书</span>
+					<img src="" id="pickfiles1" height="130px" width="150px"/>
+					<div class="file-input">
+						<input class="file-input" placeholder="请上传正面图片" id="picValue1" name="photo" type="hidden"  />       
+						<p class="c01">必须且仅可上传1张图片</p>
+					</div>
 			        <div class="x1">
-			            <label class="inputFile y1"><input type="file" accept="image/*"><p>经办人授权委托书</p></label>
+			            <label class="inputFile y1">
+							<!--
+							<input id="file1" type="file" accept="image/*"><p>经办人授权委托书</p>
+							-->
+							<input type="button" value="选择文件..." id="browse" style="position: relative; z-index: 1;">
+						</label>
 			            <div class="y2">
 			                <p>◆ 下载并打印<a href="">经办人授权委托书，参考样例 </a></p>
 			                <p>&emsp;上传加盖公章的原件照片或扫描件</p>
@@ -171,6 +181,76 @@
     		$("#form").attr("action", "../org/openAccoStep3.htm");
     		$("#form").submit();
     	});
+		
+		
+		var uploader = new plupload.Uploader({ 
+			//实例化一个plupload上传对象
+    		browse_button : 'browse',
+    		url : '../upload/upload.htm',
+    		//flash_swf_url : 'js/Moxie.swf', //swf文件，当需要使用swf方式进行上传时需要配置该参数
+    		//silverlight_xap_url : 'js/Moxie.xap', //silverlight文件，当需要使用silverlight方式进行上传时需要配置该参数
+			filters : {
+    			max_file_size : '3mb',
+    			mime_types: [
+    				{title : "Image files", extensions : "jpg,gif,png"}
+    			]
+    		},
+    	});
+    	uploader.init(); //初始化
+    
+    	//绑定文件添加进队列事件
+    	uploader.bind('FilesAdded',function(uploader,files){
+    		for(var i = 0, len = files.length; i<len; i++){
+    			var file_name = files[i].name; //文件名
+    			//构造html来更新UI
+				//alert(file_name);
+    			//var html = '<li id="file-' + files[i].id +'"><p class="file-name">' + file_name + '</p><p class="progress"></p></li>';
+    			//$(html).appendTo('#file-list');
+				uploader.start();
+    		}
+    	});
+    
+    	//绑定文件上传进度事件
+    	uploader.bind('UploadProgress',function(uploader,file){
+    		//$('#file-'+file.id+' .progress').css('width',file.percent + '%');//控制进度条
+    	});
+		
+		uploader.bind('FileUploaded',function(uploader,file,responseObject){
+    		var status = responseObject.status;
+			var response = jQuery.parseJSON(responseObject.response);
+			if(status == '200'){
+				$('#picValue1').val(response.data); 
+				$('#pickfiles1').css({"height":"130px","width":"150px"}).attr('src',response.data);			
+				// 更新图片信息
+				updatePicInfo("BackPhoto", response.data);
+				//hideLoader();
+			}
+    	});
+		
+    	//上传按钮
+    	$('#upload-btn').click(function(){
+    		uploader.start(); //开始上传
+    	});
+		
+		function updatePicInfo(fieldName, imgPath) {
+        	var data = {};
+        	data[fieldName] = imgPath;
+        	data["orderId"] = $("#orderId").val();
+        	$.ajax({
+        		type : "post",
+        		url : '../upload/upload.htm',
+        		dataType : "json",
+        		data : $.toJSON(data),
+        		contentType : "application/json",
+        	         
+        		success : function(result) {
+        			//var result = JSON.parse(''+data+'');
+         	       	//if('0000' == result.code){
+         	    	//	location.reload();
+         			//}
+        		}
+        	});
+        }
     });
 
 </script>
