--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep2.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep2.vm
@@ -43,9 +43,9 @@
         <div class="container">
             <a href="#" class="logo"></a>
 			<div class="nav">
-				<a href="#">我的幼富通</a>
+				<a href="../cust/session.htm" class="active">我的幼富通</a>
 				<a href="#">学费通</a>
-				<a href="#"  class="active">幼富宝</a>
+				<a href="#">幼富宝</a>
 				<a href="#">短期理财</a>
 				<a href="#">幼富贷</a>
 			</div>
@@ -53,127 +53,119 @@
     </div>
     
     <div id="body">
-		<form id="form" enctype="multipart/form-data" class="common-form"  method="post" action="${staticDomain}/org/openAccoStep2.htm">
-		<input id="orgnm" name="orgnm" type="hidden" value="$!{BankCardVo.orgnm}">
-    	<input id="orgbusiness" name="orgbusiness" type="hidden" value="$!{BankCardVo.orgbusiness}">
-    	<input id="orgprovinceno" name="orgprovinceno" type="hidden" value="$!{BankCardVo.orgprovinceno}">
-    	<input id="orgcityno" name="orgcityno" type="hidden" value="$!{BankCardVo.orgcityno}">
-    	<input id="orgadd" name="orgadd" type="hidden" value="$!{BankCardVo.orgadd}">
-    	<input id="invnm" name="invnm" type="hidden" value="$!{BankCardVo.invnm}">
-    	<input id="idno" name="idno" type="hidden" value="$!{BankCardVo.idno}">
-    	<input id="mobile" name="mobile" type="hidden" value="$!{BankCardVo.mobile}">
-    	<input id="telno" name="telno" type="hidden" value="$!{BankCardVo.telno}">
-    	<input id="emailadd" name="emailadd" type="hidden" value="$!{BankCardVo.emailadd}">
-    	<input id="rerpidno" name="rerpidno" type="hidden" value="$!{BankCardVo.rerpidno}">
-    	<input id="rerpnm" name="rerpnm" type="hidden" value="$!{BankCardVo.rerpnm}">
-        <div class="container">
-			<div class="a1">机构开户</div>
-			<div class="u2">
-				<ul class="v1">
-					<li>1 基本资料</li>
-					<li class="v1_hover">2 提交材料</li>
-					<li>3 银行账户</li>
-					<li>4 开户完成 </li>
-				</ul>
-				<div class="v2">
-				    <i class="v2_1"></i>
-					<p>以下证件材料，均须在有效期内。</p>
-					<p>格式：请提供可清晰辨认的彩色原件扫描件或数码照片；若为复印扫描件均须加盖公章后再提供彩色扫描或照片；禁止使用网上电子照片或通过PS修改过的证件； </p>
-					<p>支持：.jpg .jpeg .bmp .gif格式，大小不超过2M</p>
-				</div>
+	<form id="form" enctype="multipart/form-data" class="common-form"  method="post" action="${staticDomain}/org/openAccoStep2.htm">
+	<input id="orgnm" name="orgnm" type="hidden" value="$!{BankCardVo.orgnm}"/>
+	<input id="orgbusiness" name="orgbusiness" type="hidden" value="$!{BankCardVo.orgbusiness}"/>
+	<input id="orgprovinceno" name="orgprovinceno" type="hidden" value="$!{BankCardVo.orgprovinceno}"/>
+	<input id="orgcityno" name="orgcityno" type="hidden" value="$!{BankCardVo.orgcityno}"/>
+	<input id="orgadd" name="orgadd" type="hidden" value="$!{BankCardVo.orgadd}"/>
+	<input id="invnm" name="invnm" type="hidden" value="$!{BankCardVo.invnm}"/>
+	<input id="idno" name="idno" type="hidden" value="$!{BankCardVo.idno}"/>
+	<input id="mobile" name="mobile" type="hidden" value="$!{BankCardVo.mobile}"/>
+	<input id="telno" name="telno" type="hidden" value="$!{BankCardVo.telno}"/>
+	<input id="emailadd" name="emailadd" type="hidden" value="$!{BankCardVo.emailadd}"/>
+	<input id="rerpidno" name="rerpidno" type="hidden" value="$!{BankCardVo.rerpidno}"/>
+	<input id="rerpnm" name="rerpnm" type="hidden" value="$!{BankCardVo.rerpnm}"/>
+	<div class="container">
+		<div class="a1">机构开户</div>
+		<div class="u2">
+			<ul class="v1">
+				<li>1 基本资料</li>
+				<li class="v1_hover">2 提交材料</li>
+				<li>3 银行账户</li>
+				<li>4 开户完成 </li>
+			</ul>
+			<div class="v2">
+			    <i class="v2_1"></i>
+				<p>以下证件材料，均须在有效期内。</p>
+				<p>格式：请提供可清晰辨认的彩色原件扫描件或数码照片；若为复印扫描件均须加盖公章后再提供彩色扫描或照片；禁止使用网上电子照片或通过PS修改过的证件； </p>
+				<p>支持：.jpg .jpeg .bmp .gif格式，大小不超过3M</p>
 			</div>
-			<div class="u3">
-			    <div class="v1">
-			        <span class="v1_1">经办人授权委托书</span>
-					<img src="" id="pickfiles1" height="130px" width="150px"/>
-					<div class="file-input">
-						<input class="file-input" placeholder="请上传正面图片" id="picValue1" name="photo" type="hidden"  />       
-						<p class="c01">必须且仅可上传1张图片</p>
-					</div>
-			        <div class="x1">
-			            <label class="inputFile y1">
-							<!--
-							<input id="file1" type="file" accept="image/*"><p>经办人授权委托书</p>
-							-->
-							<input type="button" value="选择文件..." id="browse" style="position: relative; z-index: 1;">
-						</label>
-			            <div class="y2">
-			                <p>◆ 下载并打印<a href="">经办人授权委托书，参考样例 </a></p>
-			                <p>&emsp;上传加盖公章的原件照片或扫描件</p>
-			            </div>
-			        </div>
-			    </div>
-			    <div class="v1">
-			        <span class="v1_1">经办人授权委托书</span>
-			        <div class="x1">
-			            <label class="inputFile y1"><input type="file" accept="image/*"><p>民非企业登记证/营业执照</p></label>
-			            <div class="y2">
-			                <p>◆ 下须与营业执照、银行对公账户的开户名称一致，</a></p>
-			                <p>&emsp;信息审核成功后，名称不可修改。</p>
-			            </div>
-			        </div>
-			         <div class="x1">
-			            <label class="inputFile y1"><input type="file" accept="image/*"><p>组织机构代码证</p></label>
-			            <div class="y2">
-			                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</a></p>
-			                <p>&emsp;信息审核成功后，名称不可修改。</p>
-			            </div>
-			        </div>
-			         <div class="x1">
-			            <label class="inputFile y1"><input type="file" accept="image/*"><p>税务登记证</p></label>
-			            <div class="y2">
-			                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</a></p>
-			                <p>&emsp;信息审核成功后，名称不可修改。</p>
-			            </div>
-			        </div>
-			         <div class="x1">
-			            <label class="inputFile y1"><input type="file" accept="image/*"><p>银行开户证明/开户许可证</p></label>
-			            <div class="y2">
-			                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
-			                <p>&emsp; 信息审核成功后，名称不可修改。</p>
-			            </div>
-			        </div>
-			        <div class="x1">
-			            <label class="inputFile y1"><input type="file" accept="image/*"><p>办学许可证</p></label>
-			            <div class="y2">
-			                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
-			                <p>&emsp;  信息审核成功后，名称不可修改。</p>
-			            </div>
-			        </div>
-			    </div>
-			     <div class="v1">
-			        <span class="v1_1">举办人/法人身份证</span>
-			        <div class="x1">
-			            <label class="inputFile y1 y5"><input type="file" accept="image/*"><p>身份证 正面</p></label>
-			           	<label class="inputFile y1 y3"><input type="file" accept="image/*"><p>身份证 正面</p></label>
-			            <div class="y4">
-			                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
-			                <p>&emsp;信息审核成功后，名称不可修改。</p>
-			            </div>
-			        </div>
-			    </div>
-			     <div class="v1">
-			        <span class="v1_1">经办人身份证</span>
-			        <div class="x1">
-			            <label class="inputFile y1 y5"><input type="file" accept="image/*"><p>身份证 正面</p></label>
-			            <label class="inputFile y1 y3"><input type="file" accept="image/*"><p>身份证 正面</p></label>
-			            <div class="y4">
-			                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
-			                <p>&emsp;信息审核成功后，名称不可修改。</p>
-			            </div>
-			        </div>
-                     <div class="x2"><a href="#" class="">上一步</a><a href="#" class="btnA">下一步</a></div>
-			    </div>
-			</div>
+		</div>
+		<div class="u3">
+			<div class="v1">
+    	        <span class="v1_1">经办人授权委托书</span>
+    	        <div class="x1">
+    	            <label class="inputFile y1">
+						<input id="browse" type="file" accept="image/*">
+						<img name="img1" id="img1" src="" style="width:180px;height:120px"/>
+						<p>民非企业登记证/营业执照</p>
+					</label>
+    	            <div class="y2">
+    	                <p>◆ 下须与营业执照、银行对公账户的开户名称一致，</a></p>
+    	                <p>&emsp;信息审核成功后，名称不可修改。</p>
+    	            </div>
+    	        </div>
+    	        <div class="x1">
+    	            <label class="inputFile y1"><input type="file" accept="image/*"><p>组织机构代码证</p></label>
+    	            <div class="y2">
+    	                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</a></p>
+    	                <p>&emsp;信息审核成功后，名称不可修改。</p>
+    	            </div>
+    	        </div>
+    	        <div class="x1">
+    	            <label class="inputFile y1"><input type="file" accept="image/*"><p>税务登记证</p></label>
+    	            <div class="y2">
+    	                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</a></p>
+    	                <p>&emsp;信息审核成功后，名称不可修改。</p>
+    	            </div>
+    	        </div>
+    	        <div class="x1">
+    	            <label class="inputFile y1"><input type="file" accept="image/*"><p>银行开户证明/开户许可证</p></label>
+    	            <div class="y2">
+    	                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
+    	                <p>&emsp; 信息审核成功后，名称不可修改。</p>
+    	            </div>
+    	        </div>
+    	        <div class="x1">
+    	            <label class="inputFile y1"><input type="file" accept="image/*"><p>办学许可证</p></label>
+    	            <div class="y2">
+    	                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
+    	                <p>&emsp;  信息审核成功后，名称不可修改。</p>
+    	            </div>
+    	        </div>
+    	    </div>
+			<div class="v1">
+		        <span class="v1_1">举办人/法人身份证</span>
+		        <div class="x1">
+		            <label class="inputFile y1 y5"><input type="file" accept="image/*"><p>身份证 正面</p></label>
+		           	<label class="inputFile y1 y3"><input type="file" accept="image/*"><p>身份证 正面</p></label>
+		            <div class="y4">
+		                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
+		                <p>&emsp;信息审核成功后，名称不可修改。</p>
+		            </div>
+		        </div>
+		    </div>
+			<div class="v1">
+		        <span class="v1_1">经办人身份证</span>
+		        <div class="x1">
+		            <label class="inputFile y1 y5"><input type="file" accept="image/*"><p>身份证 正面</p></label>
+		            <label class="inputFile y1 y3"><input type="file" accept="image/*"><p>身份证 正面</p></label>
+		            <div class="y4">
+		                <p>◆ 须与营业执照、银行对公账户的开户名称一致，</p>
+		                <p>&emsp;信息审核成功后，名称不可修改。</p>
+		            </div>
+		        </div>
+                 <div class="x2"><a href="#" class="">上一步</a><a href="#" class="btnA">下一步</a></div>
+		    </div>
 			
-        </div>
-		</form>
+			
+			
+        </div>	
+		
+		
+		
+    </div>
+	
+	
+	
+	
+    </form>
     </div>
 </div>
-
 <script type="text/javascript">
-    $(function(){
-        $(".u2 .v2 .v2_1").click(function(){
+$(function(){
+		$(".u2 .v2 .v2_1").click(function(){
             $(".u2 .v2").hide();
         });
 		
@@ -204,7 +196,6 @@
     		for(var i = 0, len = files.length; i<len; i++){
     			var file_name = files[i].name; //文件名
     			//构造html来更新UI
-				//alert(file_name);
     			//var html = '<li id="file-' + files[i].id +'"><p class="file-name">' + file_name + '</p><p class="progress"></p></li>';
     			//$(html).appendTo('#file-list');
 				uploader.start();
@@ -220,10 +211,20 @@
     		var status = responseObject.status;
 			var response = jQuery.parseJSON(responseObject.response);
 			if(status == '200'){
-				$('#picValue1').val(response.data); 
-				$('#pickfiles1').css({"height":"130px","width":"150px"}).attr('src',response.data);			
+				//$('#picValue1').val(response.data); 
+				//$('#pickfiles1').css({"height":"130px","width":"150px"}).attr('src',response.data);	
+				$('#img1').attr('src','${staticDomain}/images/' + response);	
 				// 更新图片信息
-				updatePicInfo("BackPhoto", response.data);
+				//updatePicInfo("BackPhoto", response.data);
+				//hideLoader();
+			}
+			if(status == '200'){
+				//$('#picValue1').val(response.data); 
+				//$('#pickfiles1').css({"height":"130px","width":"150px"}).attr('src',response.data);	
+				$('#img1').attr('src','${staticDomain}/images/' + response);	
+				
+				// 更新图片信息
+				//updatePicInfo("BackPhoto", response.data);
 				//hideLoader();
 			}
     	});
@@ -232,28 +233,8 @@
     	$('#upload-btn').click(function(){
     		uploader.start(); //开始上传
     	});
-		
-		function updatePicInfo(fieldName, imgPath) {
-        	var data = {};
-        	data[fieldName] = imgPath;
-        	data["orderId"] = $("#orderId").val();
-        	$.ajax({
-        		type : "post",
-        		url : '../upload/upload.htm',
-        		dataType : "json",
-        		data : $.toJSON(data),
-        		contentType : "application/json",
-        	         
-        		success : function(result) {
-        			//var result = JSON.parse(''+data+'');
-         	       	//if('0000' == result.code){
-         	    	//	location.reload();
-         			//}
-        		}
-        	});
-        }
-    });
-
+ });
 </script>
+	
 </body>
 </html>
