--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep1.vm
@@ -71,20 +71,31 @@
 			<div class="a4 mt20">
 				<div class="b1">
 					<table>
-						<tr>
+						<tr class="reg-tr">
 							<td>机构名称</td>
-							<td><label class="inputText"><input name="orgnm" type="text" value="${BankCardVo.orgnm}"></label></td>
-							#if(${errMsg_ORGNM})
-							<td><div class="formErr">错误提示：${errMsg_ORGNM}</div></td>
-							#end
-							<td#if(${errMsg_ORGNM}) style="display:none" #end>须与营业执照、银行对公账户的开户名称一致，信息审核成功后，名称不可修改。</td>
+							<td><label class="inputText"><input class="ipt-orgnm" maxlength="24" name="orgnm" type="text" value="${BankCardVo.orgnm}"></label></td>
+							<td id="errMsg_orgnm" style="display:
+								#if(${errMsg_orgnm}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_orgnm}) formErr #end">错误提示：${errMsg_orgnm}</div>
+							</td>
+							<td id="tipMsg_orgnm" style="display:
+								#if(${errMsg_orgnm}) none #else true #end">须与营业执照、银行对公账户的开户名称一致，信息审核成功后，名称不可修改。
+							</td>
 						</tr>
-						<tr>
+						<tr class="reg-tr">
 							<td>营业执照号</td>
-							<td><label class="cardFormat" id="card1"><input name="orgbusiness" type="text" value="${BankCardVo.orgbusiness}"></label></td>
-							<td>请输入15位营业执照注册号</td>
+							<td><label class="cardFormat" id="card1"><input class="ipt-orgbusiness" maxlength="24" name="orgbusiness" type="text" value="${BankCardVo.orgbusiness}"></label></td>
+							<td id="errMsg_orgbusiness" style="display:
+								#if(${errMsg_orgbusiness}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_orgbusiness}) formErr #end">错误提示：${errMsg_orgbusiness}</div>
+							</td>
+							<td id="tipMsg_orgbusiness" style="display:
+								#if(${errMsg_orgbusiness}) none #else true #end">请输入15位营业执照注册号。
+							</td>
 						</tr>
-						<tr>
+						<tr class="reg-tr">
 							<td>实际办学/经营地址</td>
 							<td>
 								<select name="orgprovinceno" class="select" value="${BankCardVo.orgprovinceno}">
@@ -102,10 +113,10 @@
                                 </select>
 							</td>
 						</tr>
-						<tr>
+						<tr class="reg-tr">
 							<td></td>
 							<td>
-								<label class="inputText"><input name="orgadd" type="text" value="${BankCardVo.orgadd}"></label>
+								<label class="inputText"><input class="ipt-orgadd" maxlength="32" name="orgadd" type="text" value="${BankCardVo.orgadd}"></label>
 							</td>
 							<td>
 								必须为真实办公或经营地址、办学地址
@@ -122,16 +133,25 @@
 				</div>
 				<div class="b1">
 					<table>
-						<tr>
+						<tr class="reg-tr">
 							<td>授权经办人姓名</td>
-							<td><label class="inputText"><input name="invnm" type="text" value="${BankCardVo.invnm}"></label></td>
-							<td><label class="checkbox"><input type="checkbox">与营业执照中注册地址相同</label></td>
+							<td><label class="inputText">
+									<input class="ipt-invnm" maxlength="12" name="invnm" type="text" value="${BankCardVo.invnm}"></label>
+							</td>
+							<td id="errMsg_invnm" style="display:
+								#if(${errMsg_invnm}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_invnm}) formErr #end">错误提示：${errMsg_invnm}</div>
+							</td>
+							<td id="tipMsg_invnm" style="display:
+								#if(${errMsg_invnm}) none #else true #end">
+							</td>
 						</tr>
 						<tr class="reg-tr">
 							<td>身份证号</td>
 							<td>
 								<label class="cardFormat" id="card2">
-									<input id="idno" class="ipt-idCard" name="idno" type="text" value="${BankCardVo.idno}">
+									<input id="idno" class="ipt-idno" maxlength="18" name="idno" type="text" value="${BankCardVo.idno}">
 								</label>
 							</td>
 							<td id="errMsg_idno" style="display:
@@ -140,46 +160,80 @@
 									#if(${errMsg_idno}) formErr #end">错误提示：${errMsg_idno}</div>
 							</td>
 							<td id="tipMsg_idno" style="display:
-								#if(${errMsg_idno}) none #else true #end">若为临时身份证，请输入临时身份证号。</td>
+								#if(${errMsg_idno}) none #else true #end">若为临时身份证，请输入临时身份证号。
+							</td>
 						</tr>
-						<tr>
+						<tr class="reg-tr">
 							<td>手机</td>
 							<td>
-								<label class="inputText"><input name="mobile" type="text" value="${BankCardVo.mobile}"></label>
+								<label class="inputText">
+									<input class="ipt-mobile" maxlength="11" name="mobile" type="text" value="${BankCardVo.mobile}">
+								</label>
 							</td>
-							<td>
-								开户审核过程中将与经办人联系
+							<td id="errMsg_mobile" style="display:
+								#if(${errMsg_mobile}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_mobile}) formErr #end">错误提示：${errMsg_mobile}</div>
+							</td>
+							<td id="tipMsg_mobile" style="display:
+								#if(${errMsg_mobile}) none #else true #end">开户审核过程中将与经办人联系。
 							</td>
 						</tr>
-						<tr>
+						<tr class="reg-tr">
 							<td>固定电话</td>
 							<td>
-								<label class="inputText"><input name="telno" type="text" value="${BankCardVo.telno}"></label>
+								<label class="inputText"><input class="ipt-telno" name="telno" maxlength="12" type="text" value="${BankCardVo.telno}"></label>
 							</td>
-							<td>
-								包括区号、号码、分机号，请用“-”隔开
+							<td id="errMsg_telno" style="display:
+								#if(${errMsg_telno}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_telno}) formErr #end">错误提示：${errMsg_telno}</div>
+							</td>
+							<td id="tipMsg_telno" style="display:
+								#if(${errMsg_telno}) none #else true #end">包括区号、号码、分机号，请用“-”隔开。
 							</td>
 						</tr>
-						<tr>
+						<tr class="reg-tr">
 							<td>邮箱</td>
 							<td>
-								<label class="inputText"><input name="emailladd" type="text" value="${BankCardVo.emailadd}"></label>
+								<label class="inputText"><input class="ipt-emailadd" name="emailadd" maxlength="32" type="text" value="${BankCardVo.emailadd}"></label>
 							</td>
-							<td><div class="formErr">错误提示</div></td>
+							<td id="errMsg_emailadd" style="display:
+								#if(${errMsg_emailadd}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_emailadd}) formErr #end">错误提示：${errMsg_emailadd}</div>
+							</td>
+							<td id="tipMsg_emailladd" style="display:
+								#if(${errMsg_emailadd}) none #else true #end">包括区号、号码、分机号，请用“-”隔开。
+							</td>
 						</tr>
 					</table>
 				</div>
 				<div class="b1">
 					<table>
-						<tr>
+						<tr class="reg-tr">
 							<td>法定代表人姓名</td>
-							<td><label class="inputText"><input name="rerpnm" type="text" value="${BankCardVo.rerpnm}"></label></td>
-							<td>须与营业执照一致</td>
+							<td><label class="inputText"><input class="ipt-rerpnm" maxlength="16" name="rerpnm" type="text" value="${BankCardVo.rerpnm}"></label></td>
+							<td id="errMsg_rerpnm" style="display:
+								#if(${errMsg_rerpnm}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_rerpnm}) formErr #end">错误提示：${errMsg_rerpnm}</div>
+							</td>
+							<td id="tipMsg_rerpnm" style="display:
+								#if(${errMsg_rerpnm}) none #else true #end">须与营业执照一致。
+							</td>
 						</tr>
-						<tr>
+						<tr class="reg-tr">
 							<td>身份证号</td>
-							<td><label class="cardFormat" id="card3"><input name="rerpidno" type="text" value="${BankCardVo.rerpidno}"></label></td>
-							<td>若为临时身份证，请输入临时身份证号</td>
+							<td><label class="cardFormat" id="card3"><input class="ipt-rerpidno" maxlength="18" name="rerpidno" type="text" value="${BankCardVo.rerpidno}"></label></td>
+							<td id="errMsg_rerpidno" style="display:
+								#if(${errMsg_rerpidno}) true #else none #end">
+								<div class="tips-check 
+									#if(${errMsg_rerpidno}) formErr #end">错误提示：${errMsg_rerpidno}</div>
+							</td>
+							<td id="tipMsg_rerpidno" style="display:
+								#if(${errMsg_rerpidno}) none #else true #end">若为临时身份证，请输入临时身份证号。
+							</td>
 						</tr>
 						<tr>
 							<td></td>
@@ -212,9 +266,36 @@
         });
 		
 		$(".btnA").on("click",function(){
-    		$("#form").attr("action", "../org/openAccoStep2.htm");
-    		$("#form").submit();
-    	});
+        	var errLen = $(".formErr").length;
+        	if(errLen>0){
+        		$(".formErr:eq(0)").focus();
+        		return false;
+        	}
+        	if(!check_organization($(".ipt-orgnm"))){
+        		return false;
+        	}
+        	if(!check_business($(".ipt-orgbusiness"))){
+        		return false;
+        	}
+        	if(!check_bankAcnm($(".ipt-invnm"))){
+        		return false;
+        	}
+        	if(!check_id($(".ipt-idno"))){
+        		return false;
+        	}
+        	if(!check_mobile($(".ipt-mobile"))){
+        		return false;
+        	}
+        	if(!check_bankAcnm($(".ipt-rerpnm"))){
+        		return false;
+        	}
+        	if(!check_id($(".ipt-rerpidno"))){
+        		return false;
+        	}
+        	$("#form").attr("action", "../org/openAccoStep2.htm");
+        	$("#form").submit();
+        });
+		
     });
 </script>
  
